fix: use konflux-ci-sa while running the pipeline

--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -380,6 +380,8 @@ spec:
   # https://github.com/redhat-appstudio/infra-deployments/blob/main/components/tekton-ci/production/cleanup-cronjob.yaml
   timeouts:
     pipeline: "2h"
+  taskRunTemplate:
+    serviceAccountName: konflux-ci-sa
   workspaces:
     - name: workspace
       volumeClaimTemplate:
