--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -261,6 +261,8 @@ spec:
           value: ":x: Tekton pipelineRun $(context.pipelineRun.name) failed"
         - name: key-name
           value: $(params.slack-webhook-notification-team)
+  taskRunTemplate:
+    serviceAccountName: konflux-ci-sa
   workspaces:
     - name: workspace
       volumeClaimTemplate:
