Add "redhat" versioning template for Mobster
Mobster is released using Konflux and is produced with
"{version}-{suffix}" tags. By default renovate detect a suffix as a
platform. This causes that updates are done only if matching platform is
found. Since our suffix is part of version (release) it is dynamic and
never stay the same. With non-redhat versioning renovate always skip the
update of Mobster images.

This commit fixes the issue with not updating Mobster images using
renovate.

Signed-off-by: Ales Raszka <araszka@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -328,7 +328,8 @@
         "image: (?<depName>quay\\.io/konflux-ci/mobster[^:]*):(?<currentValue>[^@]*)@(?<currentDigest>sha256:[a-f0-9]{64})"
       ],
       "autoReplaceStringTemplate": "image: {{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
-      "datasourceTemplate": "docker"
+      "datasourceTemplate": "docker",
+      "versioningTemplate": "redhat"
     }
   ]
 }
