feat: add Sealights expiration date
Signed-off-by: flacatus <flacatus@redhat.com>

--- a/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
+++ b/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
@@ -8,6 +8,7 @@ metadata:
     app.kubernetes.io/version: "0.1"
   annotations:
     tekton.dev/pipelines.minVersion: 0.12.1
+    build.appstudio.redhat.com/expires-on: "2025-10-26T00:00:00Z"
     tekton.dev/tags: konflux
 spec:
   description: >-
