--- a/task/sealights-nodejs-oci-ta/0.1/sealights-nodejs-oci-ta.yaml
+++ b/task/sealights-nodejs-oci-ta/0.1/sealights-nodejs-oci-ta.yaml
@@ -9,6 +9,7 @@ metadata:
   annotations:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: konflux
+    build.appstudio.redhat.com/expires-on: "2025-10-26T00:00:00Z"
 spec:
   description: >-
     This Tekton task automates the process of configuring your Node.js application with Sealights for quality analytics and testing.
