fix: disabling contextualization globally
Due to reported performance issues, we are temporarily
disabling contextual SBOM to investigate performance
bottlenecks.
It can still be enabled by setting CONTEXTUALIZE_SBOM to "true".

Signed-off-by: Erik Mravec <emravec@redhat.com>

--- a/task/buildah-min/0.6/buildah-min.yaml
+++ b/task/buildah-min/0.6/buildah-min.yaml
@@ -196,7 +196,7 @@ spec:
     description: The image is built from this URL.
     name: SOURCE_URL
     type: string
-  - default: "true"
+  - default: "false"
     description: Determines if SBOM will be contextualized.
     name: CONTEXTUALIZE_SBOM
     type: string
