--- a/task/buildah-oci-ta/0.6/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.6/buildah-oci-ta.yaml
@@ -78,7 +78,7 @@ spec:
     - name: CONTEXTUALIZE_SBOM
       description: Determines if SBOM will be contextualized.
       type: string
-      default: "true"
+      default: "false"
     - name: DOCKERFILE
       description: Path to the Dockerfile to build.
       type: string
