--- a/task/buildah-remote-oci-ta/0.6/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.6/buildah-remote-oci-ta.yaml
@@ -74,7 +74,7 @@ spec:
     description: Path to the directory to use as context.
     name: CONTEXT
     type: string
-  - default: "true"
+  - default: "false"
     description: Determines if SBOM will be contextualized.
     name: CONTEXTUALIZE_SBOM
     type: string
