--- a/task/buildah-remote/0.6/buildah-remote.yaml
+++ b/task/buildah-remote/0.6/buildah-remote.yaml
@@ -196,7 +196,7 @@ spec:
     description: The image is built from this URL.
     name: SOURCE_URL
     type: string
-  - default: "true"
+  - default: "false"
     description: Determines if SBOM will be contextualized.
     name: CONTEXTUALIZE_SBOM
     type: string
