--- a/task/buildah/0.6/buildah.yaml
+++ b/task/buildah/0.6/buildah.yaml
@@ -181,7 +181,7 @@ spec:
   - name: CONTEXTUALIZE_SBOM
     description: Determines if SBOM will be contextualized.
     type: string
-    default: "true"
+    default: "false"
   results:
   - description: Digest of the image just built
     name: IMAGE_DIGEST
