--- a/task/buildah-oci-ta/0.6/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.6/buildah-oci-ta.yaml
@@ -145,6 +145,11 @@ spec:
         from.
       type: string
       default: proxy-ca-bundle
+    - name: SBOM_SYFT_SELECT_CATALOGERS
+      description: Extra option to customize Syft's default catalogers when
+        generating SBOMs. The value corresponds to Syft's CLI flag --select-catalogers.
+      type: string
+      default: ""
     - name: SBOM_TYPE
       description: 'Select the SBOM format to generate. Valid values: spdx,
         cyclonedx. Note: the SBOM from the prefetch task - if there is one
@@ -295,6 +300,8 @@ spec:
         value: $(params.INHERIT_BASE_IMAGE_LABELS)
       - name: PRIVILEGED_NESTED
         value: $(params.PRIVILEGED_NESTED)
+      - name: SBOM_SYFT_SELECT_CATALOGERS
+        value: $(params.SBOM_SYFT_SELECT_CATALOGERS)
       - name: SBOM_TYPE
         value: $(params.SBOM_TYPE)
       - name: SKIP_SBOM_GENERATION
@@ -1038,6 +1045,11 @@ spec:
           exit 0
         fi
 
+        SYFT_EXTRA_PARAMS=""
+        if [ "${SBOM_SYFT_SELECT_CATALOGERS}" != "" ]; then
+          SYFT_EXTRA_PARAMS="--select-catalogers ${SBOM_SYFT_SELECT_CATALOGERS}"
+        fi
+
         case $SBOM_TYPE in
         cyclonedx)
           syft_sbom_type=cyclonedx-json@1.5
@@ -1052,9 +1064,9 @@ spec:
         esac
 
         echo "Running syft on the source directory"
-        syft dir:"/var/workdir/$SOURCE_CODE_DIR/$CONTEXT" --output "$syft_sbom_type"="/var/workdir/sbom-source.json"
+        syft dir:"/var/workdir/$SOURCE_CODE_DIR/$CONTEXT" --output "$syft_sbom_type"="/var/workdir/sbom-source.json" $SYFT_EXTRA_PARAMS
         echo "Running syft on the image"
-        syft oci-dir:"$(cat /shared/container_path)" --output "$syft_sbom_type"="/var/workdir/sbom-image.json"
+        syft oci-dir:"$(cat /shared/container_path)" --output "$syft_sbom_type"="/var/workdir/sbom-image.json" $SYFT_EXTRA_PARAMS
 
         echo "[$(date --utc -Ins)] End sbom-syft-generate"
     - name: prepare-sboms
