feat(PSSECAUT-1367): add sast external task bundles
- produced by generate-external-tasks.sh script in konflux-sast-tasks-repo:
    https://github.com/konflux-ci/konflux-sast-tasks/blob/main/hack/generate-external-tasks.sh
- future bundles will be published from konflux-sast-tasks repo

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -57,6 +57,15 @@
 /stepactions/fips-operator-check-step-action    @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
 
 # renovate groupName=integration
+/external-task/coverity-availability-check           @konflux-ci/integration-service-maintainers @sfowl
+/external-task/sast-coverity-check                   @konflux-ci/integration-service-maintainers @konflux-ci/build-maintainers @sfowl
+/external-task/sast-coverity-check-oci-ta            @konflux-ci/integration-service-maintainers @konflux-ci/build-maintainers @sfowl
+/external-task/sast-shell-check                      @konflux-ci/integration-service-maintainers @sfowl
+/external-task/sast-shell-check-oci-ta               @konflux-ci/integration-service-maintainers @sfowl
+/external-task/sast-snyk-check                       @konflux-ci/integration-service-maintainers @sfowl
+/external-task/sast-snyk-check-oci-ta                @konflux-ci/integration-service-maintainers @sfowl
+/external-task/sast-unicode-check                    @konflux-ci/integration-service-maintainers @sfowl
+/external-task/sast-unicode-check-oci-ta             @konflux-ci/integration-service-maintainers @sfowl
 /task/coverity-availability-check           @konflux-ci/integration-service-maintainers @sfowl
 /task/sast-coverity-check                   @konflux-ci/integration-service-maintainers @konflux-ci/build-maintainers @sfowl
 /task/sast-coverity-check-oci-ta            @konflux-ci/integration-service-maintainers @konflux-ci/build-maintainers @sfowl
