--- a/renovate.json
+++ b/renovate.json
@@ -81,7 +81,16 @@
       "matchFileNames": [
         "external-task/clair-scan/**",
         "external-task/clamav-scan/**",
+        "external-task/coverity-availability-check/**",
         "external-task/deprecated-image-check/**",
+        "external-task/sast-coverity-check-oci-ta/**",
+        "external-task/sast-coverity-check/**",
+        "external-task/sast-shell-check-oci-ta/**",
+        "external-task/sast-shell-check/**",
+        "external-task/sast-snyk-check-oci-ta/**",
+        "external-task/sast-snyk-check/**",
+        "external-task/sast-unicode-check-oci-ta/**",
+        "external-task/sast-unicode-check/**",
         "stepactions/fips-operator-check-step-action/**",
         "task/clair-scan/**",
         "task/clamav-scan/**",
