--- a/task/buildah/0.6/buildah.yaml
+++ b/task/buildah/0.6/buildah.yaml
@@ -135,7 +135,9 @@ spec:
   - name: SBOM_SYFT_SELECT_CATALOGERS
     description: >-
       Extra option to customize Syft's default catalogers when generating SBOMs.
-      The value corresponds to Syft's CLI flag --select-catalogers.
+      The value corresponds to Syft's CLI flag --select-catalogers. The details
+      about available catalogers can be found here:
+      https://github.com/anchore/syft/wiki/Package-Cataloger-Selection
     type: string
     default: ""
   - name: BUILDAH_FORMAT
@@ -953,16 +955,13 @@ spec:
     # (need to set the workdir, see https://github.com/anchore/syft/issues/2465)
     workingDir: $(workspaces.source.path)/source
     script: |
+      #!/bin/bash
+      set -euo pipefail
       echo "[$(date --utc -Ins)] Generate SBOM"
 
       if [ "${SKIP_SBOM_GENERATION}" = "true" ]; then
         echo "Skipping SBOM generation"
         exit 0
-      fi
-
-      SYFT_EXTRA_PARAMS=""
-      if [ "${SBOM_SYFT_SELECT_CATALOGERS}" != "" ]; then
-        SYFT_EXTRA_PARAMS="--select-catalogers ${SBOM_SYFT_SELECT_CATALOGERS}"
       fi
 
       case $SBOM_TYPE in
@@ -976,8 +975,19 @@ spec:
           ;;
       esac
 
+      OCI_DIR="$(cat /shared/container_path)"
+
+      syft_args=(
+        oci-dir:"${OCI_DIR}"
+        --output "$syft_sbom_type=$(workspaces.source.path)/sbom-image.json"
+      )
+
+      if [ "${SBOM_SYFT_SELECT_CATALOGERS}" != "" ]; then
+        syft_args+=(--select-catalogers "${SBOM_SYFT_SELECT_CATALOGERS}")
+      fi
+
       echo "Running syft on the image"
-      syft oci-dir:"$(cat /shared/container_path)" --output "$syft_sbom_type"="$(workspaces.source.path)/sbom-image.json" $SYFT_EXTRA_PARAMS
+      syft "${syft_args[@]}"
 
       echo "[$(date --utc -Ins)] End sbom-syft-generate"
     volumeMounts:
