Set IMAGE_NAMING_STRATEGY environment variable.
Signed-off-by: Greg Allen <gallen@redhat.com>

--- a/task/ko-oci-ta/0.1/ko-oci-ta.yaml
+++ b/task/ko-oci-ta/0.1/ko-oci-ta.yaml
@@ -113,6 +113,8 @@ spec:
           value: -buildvcs=false
         - name: IMAGE_EXPIRES_AFTER
           value: $(params.IMAGE_EXPIRES_AFTER)
+        - name: IMAGE_NAMING_STRATEGY
+          value: $(params.IMAGE_NAMING_STRATEGY)
         - name: IMPORT_PATH
           value: $(params.IMPORT_PATH)
         - name: KO_DOCKER_REPO
