task/buildah: add OMIT_HISTORY parameter
This basically pipes through to buildah's `--omit-history`. IMO this
should be on by default for official images; it's an implementation
detail how we build our images. That said, this has been the behaviour
for a while now and I wouldn't be surprised at all if there were
things/scanners that used this info somehow. So make it opt-in.

But mostly my motivation for doing this right now is that it makes the
artifacts harder to reproduce.

Signed-off-by: Jonathan Lebon <jonathan@jlebon.com>

--- a/task/buildah-oci-ta/0.6/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.6/buildah-oci-ta.yaml
@@ -125,6 +125,11 @@ spec:
         the HTTP/HTTPS proxy.
       type: string
       default: ""
+    - name: OMIT_HISTORY
+      description: Omit build history information from the resulting image.
+        Improves reproducibility by excluding timestamps and layer metadata.
+      type: string
+      default: "false"
     - name: PREFETCH_INPUT
       description: In case it is not empty, the prefetched content should
         be made available to the build.
@@ -392,6 +397,8 @@ spec:
           value: $(params.NO_PROXY)
         - name: ICM_KEEP_COMPAT_LOCATION
           value: $(params.ICM_KEEP_COMPAT_LOCATION)
+        - name: BUILDAH_OMIT_HISTORY
+          value: $(params.OMIT_HISTORY)
       script: |
         #!/bin/bash
         set -euo pipefail
@@ -651,6 +658,10 @@ spec:
 
         if [ "${INHERIT_BASE_IMAGE_LABELS}" != "true" ]; then
           BUILDAH_ARGS+=("--inherit-labels=false")
+        fi
+
+        if [ "${BUILDAH_OMIT_HISTORY}" == "true" ]; then
+          BUILDAH_ARGS+=("--omit-history")
         fi
 
         VOLUME_MOUNTS=()
