add missing policy ruleData
Signed-off-by: arewm <arewm@users.noreply.github.com>

--- a/policies/all-tasks.yaml
+++ b/policies/all-tasks.yaml
@@ -13,6 +13,10 @@ sources:
         - ssh-directory
         - netrc
         - gitops-auth
+      allowed_step_image_registry_prefixes:
+        - quay.io
+        - registry.access.redhat.com
+        - registry.redhat.io
       required_task_results:
         # Certain EC rules rely on the presence of these results when validating an image.
         - task: clair-scan
