add expires-on annotation to the old version
I've set the annotation after the new year, becasue there will be business shutdown during Christmas.
The label is propagated to the `build-image-manifest` task, which has warning in the README (since 1.8.2024) to not use that task and use `build-image-index` instead.
After the expiration period, the `build-image-manifest` should be deleted.

Signed-off-by: Filip Mudry <fmudry@redhat.com>

--- a/task/build-image-manifest/0.1/build-image-manifest.yaml
+++ b/task/build-image-manifest/0.1/build-image-manifest.yaml
@@ -3,6 +3,9 @@ apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   annotations:
+    build.appstudio.redhat.com/expires-on: "2026-01-09T00:00:00Z"
+    build.appstudio.redhat.com/expiry-message: Please update your configuration to
+      use the 'build-image-index' task (version 0.2).
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, konflux
   labels:
