fix shellcheck error
This was probably merged before the shellcheck was introduced in our CI.

Signed-off-by: Filip Mudry <fmudry@redhat.com>

--- a/task/build-image-index/0.2/build-image-index.yaml
+++ b/task/build-image-index/0.2/build-image-index.yaml
@@ -199,7 +199,7 @@ spec:
         image_manifests="${image_manifests} ${INDEX_REPOSITORY}@${i},"
       done
 
-      cat image-digest | tee $(results.IMAGE_DIGEST.path)
+      tee "$(results.IMAGE_DIGEST.path)" < image-digest
       echo -n "$IMAGE" | tee "$(results.IMAGE_URL.path)"
       {
         echo -n "${IMAGE}@"
