Fix cosign to use image ref.
Signed-off-by: Greg Allen <gallen@redhat.com>

--- a/task/ko-oci-ta/0.1/ko-oci-ta.yaml
+++ b/task/ko-oci-ta/0.1/ko-oci-ta.yaml
@@ -147,7 +147,7 @@ spec:
         sbom_url=$(grep 'Published SBOM' /tmp/build.log | awk '{print $5}')
         sbom_file=$(grep 'Writing SBOM to' /tmp/build.log | awk '{print $6}')
 
-        cosign attach sbom --type=spdx --input-format=json --sbom="${sbom_file}" "${url}"
+        cosign attach sbom --type=spdx --input-format=json --sbom="${sbom_file}" "${url}@${digest}"
 
         echo "IMAGE_DIGEST=${digest}"
         echo "IMAGE_REF=${ref}"
