Add logs to reproduce olot exact command

--- a/task/modelcar-oci-ta/0.1/modelcar-oci-ta.yaml
+++ b/task/modelcar-oci-ta/0.1/modelcar-oci-ta.yaml
@@ -185,6 +185,10 @@ spec:
         fi
         pip install olot=="${OLOT_VERSION}"
 
+        echo REMOVE_ORIGINALS_ARG "${REMOVE_ORIGINALS_ARG[@]}"
+        echo MODELCARD_PATH "$MODELCARD_PATH"
+        echo TARGET_OCI "$TARGET_OCI"
+
         olot "${REMOVE_ORIGINALS_ARG[@]}" -m "$MODELCARD_PATH" "$TARGET_OCI" models/*
 
     - name: push-image
