feat(KONFLUX-6945): update fips tasks for mirror set enhancement
Signed-off-by: Nate Marsella <nmarsell@redhat.com>

--- a/task/fbc-fips-check-oci-ta/0.1/fbc-fips-check-oci-ta.yaml
+++ b/task/fbc-fips-check-oci-ta/0.1/fbc-fips-check-oci-ta.yaml
@@ -181,8 +181,8 @@ spec:
               echo "Could not inspect original pullspec $bundle. Checking if there's a mirror present"
               if [ -n "${image_mirror_map}" ]; then
                 reg_and_repo=$(get_image_registry_and_repository "${bundle}")
-                mapfile -t mirrors < <(echo "${image_mirror_map}" | jq -r --arg image "${reg_and_repo}" '.[$image] // ["No mirrors found"] | .[]')
-                if [[ "${mirrors[0]}" == "No mirrors found" ]]; then
+                mapfile -t mirrors < <(get_image_mirror_list "${reg_and_repo}" "${image_mirror_map}")
+                if [[ -z "${mirrors[0]}" ]]; then
                   echo "No mirrors found in image mirror map for ${reg_and_repo}"
                 else
                   echo "Mirrors for $reg_and_repo are:"
@@ -291,7 +291,7 @@ spec:
           - name: url
             value: https://github.com/konflux-ci/build-definitions
           - name: revision
-            value: 02ac30080ba6bb62d9738e5c5ad6268c73e74a20
+            value: a308fe2078cdb1ded8dac223da217f83e73421a5
           - name: pathInRepo
             value: stepactions/fips-operator-check-step-action/0.1/fips-operator-check-step-action.yaml
         resolver: git
