fix(): update annotations logic for migration script
update `has-migration` annotation logic for migration script.
The current logic fails to add the annotation if its our first migration.

The logic was updated to:

- If the previous migration bundle digest is not empty, check if the same migration script file exists in the previous task bundle.
- If it exists, skip adding the annotation.
- If it does not exist, add the annotation.
- If the previous migration bundle digest is empty, add the annotation.

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/task/tkn-bundle-oci-ta/0.2/tkn-bundle-oci-ta.yaml
+++ b/task/tkn-bundle-oci-ta/0.2/tkn-bundle-oci-ta.yaml
@@ -434,16 +434,21 @@ spec:
         ANNOTATIONS+=("${ANNOTATION_PREVIOUS_MIGRATION_BUNDLE}=${previous_migration_bundle_digest}")
 
         if [ "$has_migration" == "true" ]; then
+          # Assume we add the annotation unless proven otherwise
+          should_add_annotation=true
+
           if [ -n "$previous_migration_bundle_digest" ]; then
             previous_task_bundle="${IMAGE%%:*}@${previous_migration_bundle_digest}"
-            if ! has_same_migration_in_previous_task_bundle=$(bundle_has_migration "${previous_task_bundle}" "${task_version}" "${migration_file}") || [[ "${has_same_migration_in_previous_task_bundle}" == "false" ]]; then
-              ANNOTATIONS+=("${ANNOTATION_HAS_MIGRATION}=true")
-            else
-              # still ignore the migration script file if the same migration script file has been attached to previous task bundle
-              # especially for repush or PR with .tekton/ files change only
+            # Check if the exact same migration exists in the previous bundle
+            if has_same_migration_in_previous_task_bundle=$(bundle_has_migration "${previous_task_bundle}" "${task_version}" "${migration_file}") && [[ "${has_same_migration_in_previous_task_bundle}" == "true" ]]; then
               echo "the same migration script file exists in previous task bundle ${previous_task_bundle} for pushed event, skipped"
+              should_add_annotation=false
               has_migration=false
             fi
+          fi
+
+          if [ "$should_add_annotation" == "true" ]; then
+            ANNOTATIONS+=("${ANNOTATION_HAS_MIGRATION}=true")
           fi
         fi
 
