Use new repo for Conforma in appstudio-utils image
We renamed Enterprise Contract to Conforma a while back. The old
quay repo is now deprecated, so let's start using the new repo.

Note that we're currently pushing the same images to both places, so
this change will not make any difference to the image.

To confirm the versions match:

    for r in conforma enterprise-contract; do podman run --rm --pull always quay.io/$r/cli:latest version | head - 3; done

Ref: https://issues.redhat.com/browse/EC-1570

--- a/appstudio-utils/Dockerfile
+++ b/appstudio-utils/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/enterprise-contract/cli:latest AS ec-image
+FROM quay.io/conforma/cli:latest AS ec-image
 RUN ARCH=$(uname -m) && \
     if [ "$ARCH" = "x86_64" ]; then ARCH="amd64"; elif [ "$ARCH" = "aarch64" ]; then ARCH="arm64"; fi && \
     cp /usr/local/bin/ec_linux_${ARCH}.gz /tmp/ec.gz
