shared-ci: Add files with minor changes
Some files in build-definitions are almost the same as in
task-repo-shared-ci.

Commit them with a notice that the file is now templated and very minor
fixes.
Let them be handled by cruft from now on.

Signed-off-by: Tomáš Nevrlka <tnevrlka@redhat.com>

--- a/.github/resources/workspace-template.yaml
+++ b/.github/resources/workspace-template.yaml
@@ -1,3 +1,10 @@
+# yamllint disable-file
+
+# <TEMPLATED FILE!>
+# This file comes from the templates at https://github.com/konflux-ci/task-repo-shared-ci.
+# Please consider sending a PR upstream instead of editing the file directly.
+# See the SHARED-CI.md document in this repo for more details.
+
 ---
 spec:
   accessModes:
