--- a/.github/workflows/check-kustomize-build.yaml
+++ b/.github/workflows/check-kustomize-build.yaml
@@ -1,3 +1,10 @@
+# yamllint disable-file
+
+# <TEMPLATED FILE!>
+# This file comes from the templates at https://github.com/konflux-ci/task-repo-shared-ci.
+# Please consider sending a PR upstream instead of editing the file directly.
+# See the SHARED-CI.md document in this repo for more details.
+
 name: Validate PR - kustomize manifests
 'on':
   pull_request:
@@ -6,11 +13,11 @@ name: Validate PR - kustomize manifests
     types: [checks_requested]
 jobs:
   kustomize-build:
-    name: Check Kustomize Build of Task and Pipelines
+    name: Check Kustomize Build of Task
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v6
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - name: Install oc
         run: |
           set -euo pipefail
