--- a/.github/workflows/check-ta.yaml
+++ b/.github/workflows/check-ta.yaml
@@ -1,3 +1,10 @@
+# yamllint disable-file
+
+# <TEMPLATED FILE!>
+# This file comes from the templates at https://github.com/konflux-ci/task-repo-shared-ci.
+# Please consider sending a PR upstream instead of editing the file directly.
+# See the SHARED-CI.md document in this repo for more details.
+
 name: Validate PR - Trusted Artifact variants
 'on':
   pull_request:
@@ -10,16 +17,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
-        uses: actions/checkout@v6
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+
       - name: Check Trusted Artifact variants
         id: check
-        run: hack/generate-ta-tasks.sh
+        run: |
+          hack/generate-ta-tasks.sh
+
       - name: Check missing Trusted Artifact variants
         id: missing
-        run: hack/missing-ta-tasks.sh
+        run: |
+          hack/missing-ta-tasks.sh
+
       - name: Attach patch
-        if: ${{ always() && steps.check.conclusion == 'failure' }}
-        uses: actions/upload-artifact@v5
+        if: ${{ steps.check.conclusion == 'failure' }}
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5.0.0
         with:
           name: Trusted artifacts patch
           path: ./ta.patch
