--- a/.github/workflows/checkton.yaml
+++ b/.github/workflows/checkton.yaml
@@ -1,3 +1,10 @@
+# yamllint disable-file
+
+# <TEMPLATED FILE!>
+# This file comes from the templates at https://github.com/konflux-ci/task-repo-shared-ci.
+# Please consider sending a PR upstream instead of editing the file directly.
+# See the SHARED-CI.md document in this repo for more details.
+
 name: Checkton
 "on":
   pull_request:
@@ -10,14 +17,14 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v6
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           # Differential Checkton requires full git history
           fetch-depth: 0
 
       - name: Run Checkton
         id: checkton
-        uses: chmeliik/checkton@v0.4.0
+        uses: chmeliik/checkton@c24110a11ba3d4acb90964be57fc1177fed2918f # v0.4.0
         with:
           # Set to false when re-enabling SARIF uploads
           fail-on-findings: true
