shared-ci: Update renovate.json
GitHub Actions need to be ignored by Renovate because they're handled by
the task-repo-shared-ci repository instead.

Signed-off-by: Tomáš Nevrlka <tnevrlka@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -361,5 +361,18 @@
       "datasourceTemplate": "docker",
       "versioningTemplate": "redhat"
     }
+  ],
+  "ignorePaths": [
+    ".github/actions/install-tkn/action.yaml",
+    ".github/resources/workspace-template.yaml",
+    ".github/scripts/test_tekton_tasks.sh",
+    ".github/workflows/check-kustomize-build.yaml",
+    ".github/workflows/check-ta.yaml",
+    ".github/workflows/check-task-migration.yaml",
+    ".github/workflows/checkton.yaml",
+    ".github/workflows/run-task-tests.yaml",
+    ".github/workflows/task-lint.yaml",
+    ".github/workflows/update-shared-ci.yaml",
+    ".github/workflows/versioning.yaml"
   ]
 }
